# llm-security-test-harness

./: .gitignore  README.md  pyproject.toml
configs/: injection_prompt.json  promptfoo.yaml  scenario.json
examples/: sample-report.md
scripts/: redteam_slice.py
src/harness/: __init__.py  cli.py  report.py  schema.py
src/harness/adapters/: __init__.py  base.py  promptfoo.py
src/harness/detectors/: __init__.py  base.py  deterministic.py  semantic.py  suite.py
