[project]
name = "llm-security-test-harness"
version = "0.1.0"
description = "Runs adversarial attacks against an LLM endpoint and normalizes findings into a report mapped to OWASP LLM Top 10 / MITRE ATLAS."
readme = "README.md"
requires-python = ">=3.11"
# M0 uses only the Python standard library. Attack tools (promptfoo) are external
# runtimes the adapters shell out to, not Python deps. Later adapters (garak, PyRIT)
# will add real dependencies here.
dependencies = []

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
