[project]
name = "llm-security-test-harness"
version = "0.1.0"
description = "Runs adversarial attacks against an LLM endpoint and normalizes findings into a report mapped to OWASP LLM Top 10 / MITRE ATLAS."
readme = "README.md"
# PyRIT supports Python 3.10–3.12 (not 3.13+), so pin the project under 3.13.
requires-python = ">=3.11,<3.13"
dependencies = [
    # PyRIT: the multi-turn adaptive attack engine (Microsoft AI Red Team).
    "pyrit>=0.14",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
